--- a/app/config/application.ini
+++ b/app/config/application.ini
@@ -32,6 +32,7 @@ debug = 1
 ;password_renewal_interval=90
 [permission]
 ; Public classes, anyone (logged or not) has access
+
 public_classes[] = PublicForm
 public_classes[] = PublicView
 public_classes[] = SystemRequestPasswordResetForm
@@ -39,6 +40,7 @@ public_classes[] = SystemPasswordResetForm
 public_classes[] = SystemModulesCheckView
 public_classes[] = SystemRegistrationForm
 public_classes[] = SystemPasswordRenewalForm
+public_classes[] = ListApprovedWorks
 
 user_register    = "1"  ; users may auto register
 reset_password   = "1"  ; users may reset password
