--- a/app/config/application.ini
+++ b/app/config/application.ini
@@ -2,7 +2,7 @@
 timezone = America/Sao_Paulo
 language = pt
 application = modelo
-title = "UniJorge Repositório"
+title = "Repositório Jorge Amado "
 theme = theme3
 seed = 
 rest_key = 
